test/classes/errors/nilability-assign/assign-oknil-borrowed-from-oknil-shared.chpl
//  lhs: borrowed?  rhs: shared?  ok

class MyClass {  var x: int;  }

var lhs: borrowed MyClass? = nil;
var rhs: shared MyClass?;

lhs = rhs;


